TUF, Design Pattern, and LeetCode